Relax ensure_all_functions_matched() to assume no interrupt use when a device has no routing information but wasn't configured by the BIOS either. The function will now only panic if a device that was previously configured would not be so anymore after enabling the IO-APIC. Fixes #7971.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42795 a95241bf-73f2-0310-859d-f6bbb57e9c96